# contrag

./: .env.example  .eslintrc.js  .npmignore  ARCHITECTURE_DIAGRAM.md  CHANGELOG.md  PUBLISHING_GUIDE.md  README.md  README_NEW.md  contrag.config.json  debug-query.js  debug-rag-build.js  docker-compose.yml  game-config.json  jest.config.js  package-lock.json  package.json  script.md  test-game-rag.js  tsconfig.json
contrag-rust/: .gitignore  CHANGELOG.md  Cargo.toml  MIGRATION_GUIDE.md  PROJECT_SUMMARY.md  PUBLISHING.md  QUICKSTART.md  README.md  pitch.md
contrag-rust/contrag-core/: Cargo.toml
contrag-rust/contrag-core/src/: config.rs  context_builder.rs  entity.rs  error.rs  lib.rs  types.rs  utils.rs
contrag-rust/contrag-core/src/data_sources/: canister_state.rs  mod.rs  stable_memory.rs
contrag-rust/contrag-core/src/embedders/: gemini.rs  http_client.rs  mod.rs  openai.rs
contrag-rust/contrag-core/src/vector_store/: mod.rs  stable_memory_store.rs
contrag-rust/examples/user-canister/: .env.example  Cargo.toml  contrag.config.json
contrag-rust/examples/user-canister/src/: lib.rs
docker/: game-mongo-init.js  mongo-init.js  postgres-init.sql
docs/: ARCHITECTURE.md  DATABASE_GUIDE.md  ENHANCED_FEATURES.md  LOCAL_TESTING.md  PLUGINS.md  PROJECT_SUMMARY.md  PUBLISHING_GUIDE.md  SETUP.md  SYSTEM_DIAGRAMS_v1.3.0.md  TESTING_GUIDE.md  USER_GUIDE.md  USER_GUIDE_v1.3.0_PREFERENCES.md  v1.3.0_RELEASE_NOTES.md
examples/: README.md  basic-usage.ts  contrag.config.json  contrag.config.mongodb.json  contrag.config.pgvector.json  demo.ts  mongodb-pgvector-gemini.json  simple-example.ts
scripts/: test-local.sh
src/: analytics-engine.ts  cli.ts  compatibility.ts  constants.ts  context-builder.ts  index.ts  types.ts  user-profile-builder.ts
test/: README.md  populate-vectors.js  test-comprehensive-rag.js  test-fixed-rag.js  test-full-rag.js  (+3 more)
test-configs/: mongodb-weaviate-gemini.json  postgres-pgvector-gemini.json  postgres-weaviate-gemini.json
(+19 files in other folders)
