[package]
name = "contrag-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ContRAG - Advanced RAG library for ICP canisters with on-chain storage"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# ICP Dependencies
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
candid = { workspace = true }
ic-stable-structures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async
futures = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async traits
async-trait = "0.1"

# Utilities
base64 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
