[package]
name = "user-canister"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
contrag-core = { path = "../../contrag-core" }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
candid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
